# mind-mapper

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  sample-items.md  search.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  main.tsx  search.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: categorize.rs  claude.rs  mod.rs  ollama.rs  openai.rs  provider.rs  retry.rs  taxonomy.rs
src-tauri/src/commands/: ai.rs  mod.rs  recategorize.rs  search.rs  settings.rs  snippets.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/files/: markdown.rs  mod.rs  sync.rs  watcher.rs
src/components/: ErrorBoundary.tsx
src/components/editor/: CodeViewer.tsx  DocumentationModal.tsx  DuplicateWarning.tsx  ItemForm.tsx  ItemList.tsx  ItemViewer.tsx  QuickAdd.tsx  RecategorizeModal.tsx  WelcomeModal.tsx
src/components/graph/: GraphEvents.tsx  GraphLegend.tsx  GraphView.tsx
src/components/search/: SearchOverlay.tsx
src/components/settings/: AISettings.tsx  Settings.tsx
src/components/sidebar/: Sidebar.tsx
src/hooks/: useGraphData.ts  useItems.ts  useSearch.ts
src/lib/: extract-keywords.ts  find-duplicates.ts  format-date.ts  graph-builder.ts  tauri-commands.ts
src/types/: index.ts
