[package]
name = "mind-mapper"
version = "0.1.0"
description = "Developer Knowledge Base"
authors = ["Austin Miller"]
edition = "2021"

[lib]
name = "mind_mapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
notify-debouncer-full = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
slug = "0.1"
log = "0.4"
thiserror = "1"
dirs = "5"
